--- a/assets/css/tpac2016.css
+++ b/assets/css/tpac2016.css
@@ -95,7 +95,7 @@ p {
 }
 
 #side-nav-content.active {
-    transform: translateX(120%);
+    transform: translateX(125%);
 }
 
 .container {
